fixed usermedia on safari, video is now full size on android, added better loader, added overlay on video

--- a/app/assets/stylesheets/components/_loading.scss
+++ b/app/assets/stylesheets/components/_loading.scss
@@ -7,7 +7,18 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(192, 192, 192, 0.5);
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.5)), asset_url("31.gif");
+    background-image: linear-gradient(rgba(255,255,255,0.15), rgba(255,255,255,0.15));
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading-gif {
+  background-image: asset_url("white-loading.gif");
+  background-size: cover;
+  width: 75px;
+  height: 75px;
+  z-index: 101;
 }
